# gnote

./: .env  .env.example  .gitignore  README.md  pyproject.toml  test.py
worknote/: cli.py  config.py  dates.py  files.py  llm.py
worknote.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
